--- a/style.css
+++ b/style.css
@@ -1,1 +1,70 @@
 
+
+body {
+    background-color: #777;
+    color: #777;
+    font-family: "Arial", "Helvetica Neue",
+    Helvetica, sans-serif;
+    width: 960px;
+    font-size: 18px;
+    margin: 0 auto;
+}
+
+header {
+    background: #ebebeb;
+    text-align: center;
+    width: 990px;
+    padding: 20px 60px;
+    margin-top: 10px;
+}
+
+nav {
+    margin-top: 10px;
+    background-color: #ebebeb;
+    width: 990px;
+    padding: 20px 60px;
+    text-align: center;
+}
+
+container {
+    padding-bottom: 10px;
+}
+
+section {
+    background: #ebebeb;
+    text-align: center;
+    margin: 10px 0px;
+    width: 495px;
+    float: left;
+}
+
+article {
+    background-color: #777;
+    margin-left: 20px;
+    padding-top: 20px;
+    margin-right: 10px 0px;
+    text-align: center;
+    color: #ebebeb;
+}
+
+h1, h2, h3 {
+    background-color: #ebebeb;
+    color: #777;
+    padding: 20;
+    margin: 10px;
+}
+
+p {
+    padding: 13px 5px;
+    background-color: #ebebeb;
+    color: #777;
+    margin: 10;
+}
+
+aside {
+    background-color: #ebebeb;
+    text-align: center;
+    padding: 50px 200px;
+    margin: 10px 10px;
+    float: left;
+}
